# trading-data-downloader

./: .gitignore  Cargo.toml  OBSERVABILITY_IMPLEMENTATION.md  PHASE2_ARCHIVE_IMPLEMENTATION.md  README.md  implementation_summary.md  rustfmt.toml
benches/: concurrency.rs  download_speed.rs  memory_usage.rs
docs/: metrics.md  usage.md
examples/: download_btc_data.rs  metrics_demo.rs
src/: identifier.rs  lib.rs  main.rs  metrics.rs  shutdown.rs
src/cli/: download.rs  error.rs  mod.rs  sources.rs  validate.rs
src/downloader/: config.rs  executor.rs  executor.rs.backup  job.rs  mod.rs  progress.rs  rate_limit.rs
src/fetcher/: archive.rs  binance_config.rs  binance_futures_base.rs  binance_futures_coin.rs  binance_futures_usdt.rs  binance_http.rs  binance_parser.rs  mod.rs  pagination.rs  retry_formatter.rs  shared_resources.rs
src/output/: csv.rs  mod.rs  path.rs
src/registry/: identifiers.json  mod.rs
src/resume/: checkpoint.rs  lock.rs  mod.rs  state.rs
tests/: integration_tests.rs  metrics_integration.rs
tests/contract/: binance_futures_coin_api.rs  binance_futures_usdt_api.rs
tests/integration/: download_bars.rs  download_bars_archive.rs  download_funding.rs  download_trades.rs  folder_organization.rs  identifier_validation.rs  logging.rs  progress.rs  rate_limiting.rs  resume_capability.rs  retry_behavior.rs  retry_notifications.rs  signal_handling.rs  symbol_discovery.rs  validation.rs
tests/unit/: binance_config.rs  binance_http.rs  binance_parser.rs  download_cli.rs  fetcher_factory.rs  mod.rs  output_path.rs  pagination.rs  (+1 more)
(+4 files in other folders)
