[package]
name = "trading-data-downloader"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[[bin]]
name = "trading-data-downloader"
path = "src/main.rs"

[lib]
name = "trading_data_downloader"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde-float"] }
csv = "1.3"
indicatif = "0.17"
fd-lock = "4.0"
sha2 = "0.10"
tempfile = "3.13"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.20"
async-trait = "0.1"
zip = "0.6"
bytes = "1.7"
lru = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
assert_cmd = "2.0"

[[bench]]
name = "download_speed"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "memory_usage"
harness = false
